--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Login</title>
 </head>
 <body>
   <section>
-    <div class="form__div">
+    <div id="form__div1" class="form__div1">
       <div class="form__top">
         <div class="login__link">
-          <a href="#">Войти</a>
+          <button id="btn-form1">Войти</button>
         </div>
         <div class="header__name">
           <h1>Регистрация</h1>
@@ -62,6 +62,58 @@
         </div>
       </form>
     </div>
+
+    <div id="form__div2" class="form__div2">
+      <div class="form__top">
+        <div class="login__link">
+          <button id="btn-form2">Зарегистрироваться</button>
+        </div>
+        <div class="header__name">
+          <h1>Вход</h1>
+        </div>
+      </div>
+      <form>
+        <div class="form__input__div">
+          <div class="form__title">
+            <p>Email</p>
+          </div>
+          <div class="form__input__email">
+            <div>
+              <p class="zvezda">*</p>
+              <input id="email-login" type="email" class="email" placeholder="Введите email">
+            </div>
+            <p id="error-email-login" class="error-email"></p>
+          </div>
+        </div>
+        <div class="form__input__div">
+          <div class="form__title">
+            <p>Пароль</p>
+          </div>
+          <div class="form__input__email">
+            <div>
+              <p class="zvezda">*</p>
+              <input id="password-login" type="password" class="password" placeholder="Введите пароль">
+            </div>
+            <p id="error-password-login" class="error-password"></p>
+          </div>
+        </div>
+        <div class="cheackbox__div">
+          <div class="checkbox__main">
+            <div>
+              <p class="zvezda1">*</p>
+              <input id="custom-checkbox1" id="custom-checkbox1" type="checkbox" class="custom-checkbox1">
+              <label for="custom-checkbox1"></label>
+              <p class="politic">Запомнить меня</p>
+            </div>
+            <p id="error-checkbox1" class="error-checkbox1"></p>
+          </div>
+        </div>
+        <div class="button__div">
+          <button id="btn1" class="btn">Войти</button>
+        </div>
+      </form>
+    </div>
+    
   </section>
   <script src="./script.js"></script>
 </body>
